Switch the USB2 mini port to OTG mode, which is confirmed to work well

--- a/sun50i-h6-orangepi-3.dts
+++ b/sun50i-h6-orangepi-3.dts
@@ -916,7 +916,7 @@
 			phy-names = "usb";
 			extcon = <0x32 0x00>;
 			status = "okay";
-			dr_mode = "host";
+			dr_mode = "otg";
 			phandle = <0x6e>;
 		};
 
