Disabling HDMI and LCD, which we don't use

--- a/dts/sun50i-h6-orangepi-3.dts
+++ b/dts/sun50i-h6-orangepi-3.dts
@@ -136,7 +136,7 @@
 };
 
 &hdmi {
-	status = "okay";
+	status = "disabled";
 };
 
 &hdmi_out {
@@ -222,7 +222,7 @@
 };
 
 &hdmi {
-	status = "okay";
+	status = "disabled";
 };
 
 &hdmi_out {
