--- a/dts/sun50i-h6.dtsi
+++ b/dts/sun50i-h6.dtsi
@@ -1073,6 +1073,7 @@
 				      "tcon-ch1";
 			resets = <&ccu RST_BUS_TCON_TV0>;
 			reset-names = "lcd";
+			status = "disabled";
 
 			ports {
 				#address-cells = <1>;
